alignment issues, and doing the correct way

--- a/css/qing-weis-site.webflow.css
+++ b/css/qing-weis-site.webflow.css
@@ -317,6 +317,7 @@
   font-family: 'PT Serif', serif;
   font-size: 20px;
   letter-spacing: 1px;
+  white-space: nowrap;
 }
 
 .container-3 {
@@ -561,7 +562,7 @@
 }
 
 .heading-12 {
-  margin-left: 18px;
+  margin-left: 55px;
   font-size: 17px;
 }
 
@@ -574,10 +575,10 @@
 }
 
 .div-block-4 {
-  margin-left: 14px;
+  margin-left: 55px;
   color: #333;
   font-size: 15px;
-  line-height: 25px;
+  line-height: 2;
   letter-spacing: 0px;
 }
 
